# renda-fixa-crawlers

./: .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  configs.toml  docker-compose.yml  main.py  pyproject.toml
crawlers/: crawlers.py  parsers.py
decorators/: time.py
utils/: cloud.py  files.py  web.py
