[tool.poetry]
name = "aegaeon"
version = "0.1.0"
description = ""
authors = ["Ob1On3 <silvasmath@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pre-commit = "^3.5.0"
isort = "^5.12.0"
black = "^23.11.0"
requests = "^2.32.3"
selenium = "^4.21.0"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.2"
lxml = "^5.2.2"
html5lib = "^1.1"
boto3 = "^1.34.150"
matplotlib = "^3.9.1.post1"
pdfplumber = "^0.11.3"
pypdf2 = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
